@@ -42,6 +42,7 @@ typedef enum _HklBinocularsDetectorEnum
         HKL_BINOCULARS_DETECTOR_MERLIN_MEDIPIX_3RX_QUAD,
         HKL_BINOCULARS_DETECTOR_MERLIN_MEDIPIX_3RX_QUAD_512,
         HKL_BINOCULARS_DETECTOR_CIRPAD,
+	HKL_BINOCULARS_DETECTOR_RIGAKU_XSPA,
         /* Add new your detectors here */
         HKL_BINOCULARS_DETECTOR_NUM_DETECTORS,
         /* wip */
